refactor: OptionGroup, OptionValue 응답 방식 변경 (#30) - OptionGroup, OptionValue에 대한 ResponseDTO 구현