@@ -1,11 +1,8 @@
 package com.example.sportswms.domain.product.controller;
 
 import com.example.sportswms.domain.product.dto.BrandCreateRequestDTO;
+import com.example.sportswms.domain.product.dto.OptionGroupResponseDTO;
 import com.example.sportswms.domain.product.dto.ProductCreateRequestDTO;
-import com.example.sportswms.domain.product.entity.Brand;
-import com.example.sportswms.domain.product.entity.Category;
-import com.example.sportswms.domain.product.entity.OptionGroup;
-import com.example.sportswms.domain.product.entity.Product;
 import com.example.sportswms.domain.product.service.ProductService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -16,11 +13,10 @@ import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -36,22 +32,12 @@ public class ProductController {
         return "product";
     }
 
-    /**
-     * 카테고리 선택 시 JS가 호출하는 API.
-     * 해당 카테고리의 SPEC 타입 OptionGroup과 OptionValue 목록을 JSON으로 반환.
-     */
+    @ResponseBody
     @GetMapping("/api/categories/{categoryId}/spec-option-groups")
-    public ResponseEntity<List<Map<String, Object>>> getSpecOptionGroups(@PathVariable Long categoryId) {
-        List<OptionGroup> groups = productService.getSpecOptionGroupsByCategoryId(categoryId);
-        List<Map<String, Object>> response = groups.stream()
-                .map(g -> Map.of(
-                        "id", g.getId(),
-                        "name", g.getName(),
-                        "optionValues", g.getOptionValues().stream()
-                                .map(v -> Map.of("id", v.getId(), "name", v.getName()))
-                                .collect(Collectors.toList())
-                ))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<OptionGroupResponseDTO>> getSpecOptionGroups(@PathVariable Long categoryId) {
+        List<OptionGroupResponseDTO> response = productService.getSpecOptionGroupsByCategoryId(categoryId).stream()
+                .map(OptionGroupResponseDTO::from)
+                .toList();
         return ResponseEntity.ok(response);
     }
 
