@@ -1,8 +1,7 @@
 package com.example.sportswms.domain.product.controller;
 
+import com.example.sportswms.domain.product.dto.OptionGroupResponseDTO;
 import com.example.sportswms.domain.product.dto.SKUCreateRequestDTO;
-import com.example.sportswms.domain.product.entity.OptionGroup;
-import com.example.sportswms.domain.product.entity.OptionValue;
 import com.example.sportswms.domain.product.entity.Product;
 import com.example.sportswms.domain.product.entity.ProductSKU;
 import com.example.sportswms.domain.product.service.ProductService;
@@ -15,15 +14,15 @@ import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
 public class SKUController {
+
     private final ProductService productService;
 
     @GetMapping("/sku")
@@ -35,22 +34,12 @@ public class SKUController {
         return "sku";
     }
 
-    /**
-     * 상품 선택 시 JS가 호출하는 API.
-     * 해당 상품 카테고리에 매핑된 OptionGroup과 OptionValue 목록을 JSON으로 반환.
-     */
+    @ResponseBody
     @GetMapping("/api/products/{productId}/option-groups")
-    public ResponseEntity<List<Map<String, Object>>> getOptionGroups(@PathVariable Long productId) {
-        List<OptionGroup> groups = productService.getSkuOptionGroupsByProductId(productId);
-        List<Map<String, Object>> response = groups.stream()
-                .map(g -> Map.of(
-                        "id", g.getId(),
-                        "name", g.getName(),
-                        "optionValues", g.getOptionValues().stream()
-                                .map(v -> Map.of("id", v.getId(), "name", v.getName()))
-                                .collect(Collectors.toList())
-                ))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<OptionGroupResponseDTO>> getOptionGroups(@PathVariable Long productId) {
+        List<OptionGroupResponseDTO> response = productService.getSkuOptionGroupsByProductId(productId).stream()
+                .map(OptionGroupResponseDTO::from)
+                .toList();
         return ResponseEntity.ok(response);
     }
 
